refactor! : corrections suite au bilan du projet.