@@ -4,12 +4,9 @@ import com.openclassrooms.starterjwt.dto.SessionDto;
 import com.openclassrooms.starterjwt.models.Session;
 import com.openclassrooms.starterjwt.models.Teacher;
 import com.openclassrooms.starterjwt.models.User;
-import com.openclassrooms.starterjwt.services.TeacherService;
-import com.openclassrooms.starterjwt.services.UserService;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
-import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDateTime;
@@ -17,16 +14,9 @@ import java.util.Date;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class SessionMapperTest {
-
-    @Mock
-    private TeacherService teacherService;
-
-    @Mock
-    private UserService userService;
 
     @InjectMocks
     private SessionMapperImpl sessionMapper;
@@ -58,7 +48,7 @@ class SessionMapperTest {
         assertThat(sessionDto.getName()).isEqualTo("Yoga Session");
         assertThat(sessionDto.getDate()).isEqualTo(date);
         assertThat(sessionDto.getDescription()).isEqualTo("Yoga session description");
-        assertThat(sessionDto.getTeacher_id()).isEqualTo(2L);
+        assertThat(sessionDto.getTeacherId()).isEqualTo(2L);
         assertThat(sessionDto.getUsers()).containsExactly(3L);
         assertThat(sessionDto.getCreatedAt()).isEqualTo(now);
         assertThat(sessionDto.getUpdatedAt()).isEqualTo(now);
@@ -77,7 +67,7 @@ class SessionMapperTest {
 
         SessionDto sessionDto = sessionMapper.toDto(session);
 
-        assertThat(sessionDto.getTeacher_id()).isNull();
+        assertThat(sessionDto.getTeacherId()).isNull();
         assertThat(sessionDto.getUsers()).isEmpty();
     }
 
@@ -85,18 +75,16 @@ class SessionMapperTest {
     public void toEntity_mapsTeacherIdToTeacher() {
         Teacher teacher = new Teacher();
         teacher.setId(2L);
-        when(teacherService.findById(2L)).thenReturn(teacher);
 
         SessionDto sessionDto = new SessionDto();
         sessionDto.setName("Yoga Session");
         sessionDto.setDate(new Date());
         sessionDto.setDescription("Yoga session description");
-        sessionDto.setTeacher_id(2L);
+        sessionDto.setTeacherId(2L);
         sessionDto.setUsers(List.of());
+        Session session = sessionMapper.toEntity(sessionDto, teacher, List.of());
 
-        Session session = sessionMapper.toEntity(sessionDto);
-
-        assertThat(session.getTeacher()).isEqualTo(teacher);
+        assertThat(session.getTeacher().getId()).isEqualTo(teacher.getId());
     }
 
     @Test
@@ -105,7 +93,7 @@ class SessionMapperTest {
         sessionDto.setName("Yoga Session");
         sessionDto.setDate(new Date());
         sessionDto.setDescription("Yoga session description");
-        sessionDto.setTeacher_id(null);
+        sessionDto.setTeacherId(null);
         sessionDto.setUsers(List.of());
 
         Session session = sessionMapper.toEntity(sessionDto);
@@ -117,7 +105,6 @@ class SessionMapperTest {
     public void toEntity_mapsUserIdsToUsers() {
         User user = new User("test@test.com", "test", "test", "encoded-password", false);
         user.setId(3L);
-        when(userService.findById(3L)).thenReturn(user);
 
         SessionDto sessionDto = new SessionDto();
         sessionDto.setName("Yoga Session");
@@ -125,7 +112,7 @@ class SessionMapperTest {
         sessionDto.setDescription("Yoga session description");
         sessionDto.setUsers(List.of(3L));
 
-        Session session = sessionMapper.toEntity(sessionDto);
+        Session session = sessionMapper.toEntity(sessionDto, null, List.of(user));
 
         assertThat(session.getUsers()).containsExactly(user);
     }
@@ -138,7 +125,7 @@ class SessionMapperTest {
         sessionDto.setDescription("Yoga session description");
         sessionDto.setUsers(null);
 
-        Session session = sessionMapper.toEntity(sessionDto);
+        Session session = sessionMapper.toEntity(sessionDto, null, null);
 
         assertThat(session.getUsers()).isEmpty();
     }
@@ -155,8 +142,8 @@ class SessionMapperTest {
         List<SessionDto> sessionDtos = sessionMapper.toDto(List.of(session));
 
         assertThat(sessionDtos).hasSize(1);
-        assertThat(sessionDtos.get(0).getId()).isEqualTo(1L);
-        assertThat(sessionDtos.get(0).getName()).isEqualTo("Yoga Session");
+        assertThat(sessionDtos.getFirst().getId()).isEqualTo(1L);
+        assertThat(sessionDtos.getFirst().getName()).isEqualTo("Yoga Session");
     }
 
     @Test
